--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,15 @@ body{
     font-style: normal;
 
     background: linear-gradient(180deg, #000000, #010b01, #000000);
-    /*background: linear-gradient(180deg, #000000, #111111, #000000);*/
     background-attachment: fixed;
+}
+
+#footer-page {
+    padding: 1rem 1rem 0rem 1rem;
+    background-color: rgba(15, 15, 15, 0.175);
+    align-items: center;
+}
+
+#text{
+    width: 100%;
 }
