--- a/src/styles/sobremi.css
+++ b/src/styles/sobremi.css
@@ -5,31 +5,39 @@
     gap: 16px;
     color: rgb(255, 255, 255);
     box-sizing: border-box; 
-    flex: 1 1 calc(50% - 16px);
     justify-content: center;
+    height: 100vh;
+
 }
 #content-img{
     width: min-content;
+    height: min-content;
 }
 #content-img img{
-    width: 200px;
-    height: 200px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     padding: 3px;
+    transition: 0.3s ease;
 }
+    #content-img img:hover{
+        scale: 1.1;
+    }
 
 #content-text{
-    width: 70%;
+    max-width: 70%;
+    height: min-content;
     font-size: larger;
 }
 
 #content-text h1{
+    font-size: 50px;
     color: rgb(25, 190, 36);
 }
 
 #redes-sociales{
     width: 100%;
-    margin-top: 5vh;
+    height: min-content;
     display: grid;
     justify-content: center;
 }
@@ -62,3 +70,4 @@
     background-color: rgb(36, 36, 36);
     
 }
+
