--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,12 +5,14 @@ body{
     font-weight: 1000;
     font-style: normal;
 
-    background: linear-gradient(180deg, #000000, #010b01, #000000);
+    background: linear-gradient(180deg, #000000, #02081e, #000000);
     background-attachment: fixed;
 }
 
 #footer-page {
-    padding: 1rem 1rem 0rem 1rem;
+    margin-top: 5vh;
+    padding-bottom: 28px;
+    padding: 1rem 1rem 1rem 1rem;
     background-color: rgba(15, 15, 15, 0.175);
     align-items: center;
 }
