--- a/src/styles/sobremi.css
+++ b/src/styles/sobremi.css
@@ -1,12 +1,12 @@
 #content-sobremi{
-    margin-top: 20vh;
+    margin-top: 10vh;
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
     color: rgb(255, 255, 255);
     box-sizing: border-box; 
     justify-content: center;
-    height: 100vh;
+    min-height: 50vh;
 
 }
 #content-img{
