actualizacion de scroll y boton para ver mas proyectos
Se agrego un diseño para el scrollbar y se agrego un boton que nos permite ir a una pagina alojada en vercel donde se pueden visualizar proyectos con JavaScript

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,15 @@ body{
     background-attachment: fixed;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: rgb(0, 60, 5);
+    border-radius: 10px;
+}
+
 #footer-page {
     margin-top: 5vh;
     padding-bottom: 28px;
