--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -97,5 +97,27 @@
     transform: rotate(-45deg);
   }
   
+
+  #btn-mp {
+    box-shadow: 0px 4px 8px rgb(7, 57, 10);
+    padding: 10px 20px;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    color: white;
+    background-color: rgb(0, 100, 8);
+    font-size: 22px;
+    border: none;
+    border-radius: 8px;
+    transition: all 0.4s ease-in-out;
+    cursor: pointer;
+  }
+  
+  #btn-mp:hover {
+    background-color: rgb(0, 60, 5);
+    color: white;
+    scale: 1.1;
+    box-shadow: 0px 4px 8px rgba(214, 214, 214, 0.4);
+    border-color: rgba(255, 255, 255, 0.5);
+  }
+  
   
   
