--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -34,15 +34,13 @@
   }
   
   .card:hover {
-    transform: rotate(-5deg) scale(1.1);
+    transform:scale(1.1);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   }
   
   .card__content {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-45deg);
+
     width: 100%;
     height: 100%;
     padding: 20px;
@@ -53,7 +51,7 @@
   }
   
   .card:hover .card__content {
-    transform: translate(-50%, -50%) rotate(0deg);
+   
     opacity: 1;
   }
   
