--- a/src/styles/sobremi.css
+++ b/src/styles/sobremi.css
@@ -1,12 +1,12 @@
 #content-sobremi{
-    margin-top: 10vh;
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
     color: rgb(255, 255, 255);
     box-sizing: border-box; 
     justify-content: center;
-    min-height: 0vh;
+    align-items: center;
+    min-height: 80vh;
 
 }
 #content-img{
@@ -32,34 +32,37 @@
 
 #content-text h1{
     font-size: 50px;
+    font-weight: bold;
     color: rgb(25, 190, 36);
+}
+#content-text section #experiencia{
+    font-size: 50px;
+    color: rgb(25, 190, 36);
+}
+#content-text #experiencia span{
+    font-size: 20px;
+    width: 30px;
+    color: rgb(255, 255, 255);
 }
 
 #redes-sociales{
     width: 100%;
     height: min-content;
     display: grid;
-    justify-content: center;
+    justify-content: end;
+    align-items: center;
 }
 
 .btn-social {
+    height: 100%;
     font-size: 25px;
     color: white;
-    transition: all 5ms;
+    transition: all 100ms;
+    border: solid 2px rgba(30, 146, 38, 0.506);
 }
-#btn-github:hover{
-    scale: 1.5;
-    color: rgb(36, 41, 47);  
-
-}
-
-#btn-linkedin:hover{
-    scale: 1.5;
-    color: rgb(0, 119, 181);
-}
-#btn-correo:hover{
-    scale: 1.5;
-    color: rgb(36, 41, 47);
+.btn-social:hover{
+    color:rgb(30, 146, 37); 
+    box-shadow: 0px 0px 8px 1.5px rgba(30, 146, 37, 0.8);
 }
 #btn-cv{
     color: rgb(255, 255, 255);
